<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_main"
    android:paddingTop="40sp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginTop="30sp"
        app:cardCornerRadius="5sp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25sp"
            android:paddingRight="25sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_facebook_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="25sp"
                    android:background="@drawable/signup_facebook_button_background"
                    android:text="@string/signup_with_facebook"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/or_text" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGrey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_small" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="2"
                        android:textSize="@dimen/font_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/fullname"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_small" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edittext_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/font_normal" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_small" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="@dimen/font_normal" />


                    <RadioButton
                        android:id="@+id/radio_button_signup_agreement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:text="@string/terms"
                        android:textSize="@dimen/font_small" />

                    <Button
                        android:id="@+id/button_create_new_account"
                        android:layout_width="match_parent"
                        android:layout_height="35sp"
                        android:layout_marginBottom="20sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:layout_marginTop="20sp"
                        android:background="@drawable/signup_buttons_background"
                        android:text="@string/create_new_account"
                        android:textColor="@color/blue_light" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>
</FrameLayout>