<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background_main"
    android:paddingTop="70sp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="70sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="10sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="25sp"
                android:paddingRight="25sp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <EditText
                    android:id="@+id/et_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal" />

                <Button
                    android:id="@+id/btn_create_blog"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="25sp"
                    android:background="@drawable/signup_buttons_background"
                    android:text="@string/login"
                    android:textColor="@color/blue_light" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>