<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_main"
    android:paddingTop="70sp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="25sp"
                android:paddingRight="25sp">

                <Button
                    android:id="@+id/button_facebook_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="25sp"
                    android:background="@drawable/signup_facebook_button_background"
                    android:text="@string/signup_with_facebook"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="15sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/or_text" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGrey" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="2"
                    android:textSize="@dimen/font_normal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_normal" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/signup_buttons_background"
                    android:text="@string/login"
                    android:textColor="@color/blue_light" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>